# dh-mcp

./: .gitignore  README.md  claude_desktop_config.json  pyproject.toml
scripts/: race_recap.py  smoke_test.py  sync_pinkbike_catalog.py
src/mtb_mcp/: __init__.py  cache.py  chronorace.py  news.py  pinkbike.py  scraper.py  server.py
