[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mtb-mcp"
version = "0.1.0"
description = "MCP server scraping UCI DH MTB race data for fantasy league research"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "awmatheson" }]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "curl-cffi>=0.15.0",
]

[project.scripts]
mtb-mcp-server = "mtb_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mtb_mcp"]
